
2005-05-16  Sam Steingold  <sds@gnu.org>

	* setf.tst: check that (DOCUMENTATION (LAMBDA () ...)) does not
	persist from one LAMBDA to another

2005-05-16  Sam Steingold  <sds@gnu.org>

	* path.tst: check that COMPILE-FILE returns the truename

2005-05-15  Sam Steingold  <sds@gnu.org>

	* clos.tst: added a test from
	<http://article.gmane.org/gmane.lisp.clisp.general:9582>

2005-05-11  Bruno Haible  <bruno@clisp.org>

	* alltest.tst: Update for very large fixnum sizes.
	* array.tst: Likewise.

2005-05-13  Sam Steingold  <sds@gnu.org>

	* streams.tst: more meaningful diagnostics for FILE-WRITE-DATE

2005-05-12  Sam Steingold  <sds@gnu.org>

	* tests.lisp (check-ignore-errors): new macro (checks condition slots)
	(do-errcheck): use it instead of IGNORE-ERRORS

2005-05-11  Bruno Haible  <bruno@clisp.org>

	* strings.tst: Add tests for reallocated simple-strings in make-array.

2005-05-12  Sam Steingold  <sds@gnu.org>

	* macro8.tst: check that COMPILE-FILE
	can accept a closed file as :OUTPUT-FILE

2005-05-11  Sam Steingold  <sds@gnu.org>

	* path.tst: check that we can compile files in ansi mode

2005-05-11  Sam Steingold  <sds@gnu.org>

	* conditions.tst: check that READER-ERROR has slot :STREAM

2005-05-10  Sam Steingold  <sds@gnu.org>

	* alltest.tst: added a FLET LAMBDA-PARAMETERS-LIMIT test from the
	ANSI suite that crashes on GCTRIGGER_IF/handler_args under
	mingw/g++ but not linux/g++

2005-05-10  Sam Steingold  <sds@gnu.org>

	* excepsit.tst: 4 *READ-SUPPRESS* tests from ANSI suite

2005-05-10  Sam Steingold  <sds@gnu.org>

	* type.tst (check-type-error): new macro;
	use it to check type errors

2005-05-09  Sam Steingold  <sds@gnu.org>

	* path.tst (path=): new function; test ENOUGH-NAMESTRING

2005-05-09  Sam Steingold  <sds@gnu.org>

	* path.tst: test merging with NIL defaults

2005-05-08  Bruno Haible  <bruno@clisp.org>

	* tests.lisp: Update for LispWorks 4.4.5.
	* alltest.tst: Update for LispWorks. Mark sys::coerced-subseq tests as
	clisp-only.