@@ -160,8 +160,9 @@ DEFMODULE(syscalls,"POSIX")
 #if defined(HAVE_FCNTL) || defined(WIN32_NATIVE)
 /* we use posix fcntl() on unix and win32 LockFileEx() on win32.
    since cygwin supports fcntl(), we use it there, but another option
-   would be to use cygwin get_osfhandle() + win32 LockFileEx(),
-   see <http://article.gmane.org/gmane.os.cygwin/35175> */
+   would be to use cygwin get_osfhandle() + win32 LockFileEx(), see
+   http://article.gmane.org/gmane.os.cygwin/35175
+   https://cygwin.com/ml/cygwin/2003-08/msg00588.html */
 
 /* ============================== aux ============================== */
 
@@ -1382,6 +1383,7 @@ DEFUN(POSIX::WAIT, &key :PID :USAGE :NOHANG :UNTRACED :STOPPED :EXITED \
 }
 
 /* http://article.gmane.org/gmane.lisp.clisp.devel/20422
+   https://sourceforge.net/p/clisp/mailman/message/23010926/
    https://sourceforge.net/p/clisp/bugs/593/ */
 DEFUN(POSIX::BEGIN-SUBPROCESSES,) {
     begin_system_call();
