@@ -630,7 +630,8 @@ FOO
 
 ;; From: Kaz Kylheku <kaz@ashi.footprints.net>
 ;; Date: Sat, 3 Jan 2004 14:47:25 -0800 (PST)
-;; <http://article.gmane.org/gmane.lisp.clisp.general:7853>
+;; http://article.gmane.org/gmane.lisp.clisp.general:7853
+;; https://sourceforge.net/p/clisp/mailman/message/11011470/
 (let ((file "clos-tst.lisp") c)
   (unwind-protect
        (progn
@@ -4173,7 +4174,8 @@ NIL
 
 ;; Check that methods that become active through a class redefinition
 ;; are actually invoked.
-;; <http://article.gmane.org/gmane.lisp.clisp.general:9582>
+;; http://article.gmane.org/gmane.lisp.clisp.general:9582
+;; https://sourceforge.net/p/clisp/mailman/message/12275493/
 (let ((ret '()))
   (defclass mixin-foo-144 () ())
   (defclass class-foo-144 (mixin-foo-144) ())
