@@ -1322,6 +1322,7 @@ NIL
 (block test-weird-pathnames
   (handler-bind ((parse-error
                   ;; http://article.gmane.org/gmane.lisp.clisp.devel:18772
+                  ;; https://sourceforge.net/p/clisp/mailman/message/20057056/
                   ;; some systems, e.g., OSX PPC 10.4.11 (Darwin Kernel
                   ;; Version 8.11.0), allow only ASCII pathnames
                   (handler-return test-weird-pathnames '(T NIL T T))))
@@ -1347,6 +1348,7 @@ NIL
 ;; DOS attack: bad pathnames in search can break LOAD
 ;; http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=443520
 ;; http://thread.gmane.org/gmane.lisp.clisp.devel/18532
+;; https://sourceforge.net/p/clisp/mailman/message/19813221/
 #+(and clisp unicode (not macos))
 (letf* ((custom:*pathname-encoding* charset:iso-8859-1) ; 1:1
         (weird (concatenate 'string "weird" (string (code-char 160))))
